[gd_scene load_steps=6 format=3 uid="uid://okvlhjqa7mnx"]

[ext_resource type="FontFile" uid="uid://7y1bjo8b42xe" path="res://assets/fonts/Kenney Pixel Square.ttf" id="1_au3hm"]
[ext_resource type="Script" path="res://scenes/game_start_timer/game_start_timer.gd" id="1_bvsu0"]

[sub_resource type="Animation" id="Animation_d8b8i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_sufe5"]
resource_name = "queue_free"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"exit"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xst4d"]
_data = {
"RESET": SubResource("Animation_d8b8i"),
"queue_free": SubResource("Animation_sufe5")
}

[node name="GameStartTimer" type="Node2D"]
script = ExtResource("1_bvsu0")
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xst4d")
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = -154.0
offset_right = 154.0
offset_bottom = 130.0
metadata/_edit_group_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_au3hm")
bbcode_enabled = true
text = "[center][wave amp=25 freq=5]A partida começará em..."
fit_content = true

[node name="TimeLeft" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_au3hm")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center][tornado freq=6 radius=4]3"
fit_content = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
